k8s/day5-6/k8s/ingress-https.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 3-tier-app-eks-ingress
  namespace: 3-tier-app-eks
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/healthcheck-path: "/health"  # This tells ALB to check /health for health

    
    # Enable HTTPS and HTTP to HTTPS redirect
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # 
    
    # Use the certificate managed by cert-manager
    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-TLS-1-2-2017-01"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:768093818017:certificate/3c5b07b1-19f2-4a29-8eb0-0c32c76e55b6
    
    # Add this annotation to use the certificate from cert-manager
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: "alb"
  tls:
  - hosts:
    - "devopsdozo.adishrivtech.in"

  rules:
  - host: "devopsdozo.adishrivtech.in"  # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
